// Format:
// Date (mm/dd/yr)
// rNumber [Author]
// 	* Modifications.
// 	- Details.
//========================================

03/02/2010
	r220 [pakpil]
	* Added new clif_tradeadditem packet. 0xe9 -> 0x80f.

02/28/2010
	r219 [Rytech]
	*Fixed the gm_all_skill config setting. You can now safely use it.
	-Enableing this setting will give you access ONLY to all 1st and 2nd class skills.
	-You can get 3rd class skills too, but only for the 3rd job your playing as.
	-Thankyou Pakpil for the help. =D

02/28/2010
	r218 [pakpil]
	* Fixed pc_skillup and pc_jobchange that were malfunctioning. Bug report 193.

02/28/2010
	r217 [Jobbie]
	* Mado Gear is usable without Madolicense skill upgraded. Without the license your movement speed will be 50%.
	- When in Mado Gear Blacksmith and Mastersmith skills are unusable.
	* Cannot use the skill Return to El Dicaste when mounted in Mado.
	* Some clean up to the state "ridingwarg" and "warg".
	* Minor clean up to skill Cross Ripper Slasher avoiding redundant sc checking.
	* Fix the bonus given of Tooth of Warg skill.
	* Minor fix to NC_TRAININGAXE, GN_REMODELING_CART, GN_TRAINING_SWORD hitrate bonus.
	* NC_TRAININGAXE should work with Mace.
	* Minor fix to new poison items and in const.txt. 

02/27/2010
	r216 [pakpil]
	* Minor fix in GC_POISONINGWEAPON. Removed extra sound effect when the weapon is poisoned. Bug report 209.
	* Minor fix in GC_ROLLINGCUTTER. The counter is reseted when you move from your place. Bug report 209.

02/26/2010
	r215 [pakpil]
	* Added missing file in r214.

	r214 [pakpil]
	* Added GC_RESEARCHNEWPOISON, GC_CREATENEWPOISON and GC_POISONINGWEAPON skills.
	- Added all poisons but still need more test.
	- Added new file with all skill that Magic Mushroom should cast. Magic Mushroom don't cast skill in mobs. Still need more test.
	* Improved clif_skill_fail packet to use it propertly with some skills. Still need more fix.